# Sensor-Network-Simulation

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
src/: CMakeLists.txt  Client.cpp  Client.hpp  HumiditySensor.hpp  MainNode.cpp  MainNode.hpp  Sensor.hpp  SensorFwd.hpp  TemperatureSensor.hpp  main.cpp
test/: CMakeLists.txt  exampleTest.cpp
